Log conversations with each count and add a browsable history